--- a/services.html
+++ b/services.html
@@ -75,5 +75,24 @@
     </div>
 </section>
 
+
+<!-- Additional Images Section -->
+    <section id="additional-images">
+    <h2 class="section-title">Our Ritual Services</h2>
+    
+    <div class="image-gallery">
+        <img src="1.jpg" alt="Ritual Service 1" class="three-d-image">
+        <img src="2.jpg" alt="Ritual Service 2" class="three-d-image">
+        <img src="3.jpg" alt="Ritual Service 3" class="three-d-image">
+        <img src="Sounds.jpg" alt="Ritual Service " class="three-d-image">
+        <img src="4.jpg" alt="Ritual Service 4" class="three-d-image">
+        <img src="5.jpg" alt="Ritual Service 5" class="three-d-image">
+        <img src="6.jpg" alt="Ritual Service 6" class="three-d-image">
+        <img src="7.jpg" alt="Ritual Service 7" class="three-d-image">
+    </div>
+</section>
+
+<!-- Importing Model-Viewer for 3D Models -->
+<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>        
 </body>
 </html>
