--- a/index.html
+++ b/index.html
@@ -26,12 +26,15 @@
         </nav>
     </header>
     <section class="hero">
-         <div class="video-container">
-        <video autoplay muted loop>
+    <div class="video-container">
+        <video id="heroVideo" autoplay muted loop>
             <source src="FIE.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
-      </div>
+        <button id="playPauseBtn" class="video-btn">
+            <i id="playPauseIcon" class="fas fa-pause"></i>
+        </button>
+    </div>
 
         <h2>Comprehensive Post-Death Ritual Services</h2>
         <p>We provide end-to-end arrangements including ambulances, priests, and eco-friendly options.</p>
