--- a/services.html
+++ b/services.html
@@ -37,6 +37,7 @@
                 <li>✔ Basic Pooja Materials</li>
                 <li>✔ Standard Cremation Service</li>
                 <li>✔ 24/7 Support</li>
+                <li>✔ Price - ₹40,000</li>
             </ul>
             <div class="btn-container">
                 <button class="service-btn" onclick="window.location.href='booking.html'">Book Now</button>
@@ -52,6 +53,7 @@
                 <li>✔ Additional Pooja Items</li>
                 <li>✔ Ritual Consultation</li>
                 <li>✔ Transport for Family Members</li>
+                <li>✔ Price - ₹80,000</li>
             </ul>
             <div class="btn-container">
                 <button class="service-btn" onclick="window.location.href='booking.html'">Book Now</button>
@@ -67,6 +69,8 @@
                 <li>✔ Venue Booking & Setup</li>
                 <li>✔ Live Streaming for Relatives</li>
                 <li>✔ Customized Rituals as per Faith</li>
+                <li>✔ Price - ₹1,40,000</li>
+                
             </ul>
             <div class="btn-container">
                 <button class="service-btn" onclick="window.location.href='booking.html'">Book Now</button>
